# rest_rpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: 单机上rest_rpc和brpc性能测试.md
examples/app_client/: client.hpp  main.cpp
examples/client/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  main.cpp  main2.cpp  qps.h
include/: client_util.hpp  codec.h  connection.h  const_vars.h  cplusplus_14.h  io_service_pool.h  meta_util.hpp  router.h  rpc_client.hpp  rpc_server.h  string_view.hpp  use_asio.hpp
